2007-09-12  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-network.c: remove network_timeout_stop
	function.

2007-09-12  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-parser.[ch]:
	* src/twitux-network.c: Add show UI notifications when reload
	timelines.

2007-09-11  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-network.c:
	* src/twitux.h: Add auto reload current timeline.

2007-09-10  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-app.[ch]:
	* src/twitux-network.[ch]:
	* src/twitux-parser.[ch]: Add code to load avatars into
	liststore. 

2007-09-10  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c:
	* src/twitux-parser.c (twitux_parser_timeline): Intial work
	to get liststore in corect format for the ui.

	* configure.in:
	* libtwitux/Makefile.am:
	* libtwitux/twitux-avatar.[ch]: Make library to deal with
	avatar pixbuf.

2007-09-09  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* NEWS: Bump version number, and start to add items that will be
	fixed in the next release.

2007-09-07  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-dbus.c:
	* src/twitux-network.c:
	* src/twitux-app.[ch] (twitux_app_state_on_connection): Minor tweaks.

2007-09-04  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-send-message-dialog.c (message_set_characters_available): limit
	messages sent to Twitter to a maximum of 140 characters.

2007-09-03  Brian Pepple  <bpepple@fedoraproject.org>

	* data/main.glade:
	* src/twitux-app.c (app_connection_items_setup): 
	Handle the widgets state more sanely, and remove the
	stop network function from the ui.
	
2007-09-03  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* Makefile.am:
	* src/twitux-app.c: Add initial Network Manager dbus
	support.

2007-09-02  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-app.[c]: Add code to show gui-notifications
	using libnotify.

2007-09-02  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-network.c: